Rework transformation components